# episteme

./: .gitignore  README.md  conftest.py  docker-compose.yml  notes.md  pyproject.toml
backend/app/: main.py
backend/app/pipelines/: arxiv_client.py
notebooks/: 00_architecture.md  notes.md
scripts/: test_arxiv.py  test_neo4j.py  test_ollama.py
