[tool.poetry]
name = "episteme"
version = "0.1.0"
description = "A research intelligence system powered by GraphRAG, semantic search, and agentic reasoning over scientific literature"
authors = ["pallas-lab"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# fastapi backend
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"

# data ingestion
arxiv = "^2.1.0"
semanticscholar = "^0.8.0"
pymupdf = "^1.24.0"
requests = "^2.32.0"

# nlp & embeddings
spacy = "^3.7.0"
sentence-transformers = "^3.0.0"
transformers = "^4.41.0"
datasets = "^2.19.0"
tokenizers = "^0.19.0"

# fine-tuning
peft = "^0.11.0"
accelerate = "^0.30.0"
trl = "^0.9.0"

# vector store
chromadb = "^0.5.0"

# knowledge graph
neo4j = "^5.20.0"

# agents & rag
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langgraph = "^0.1.0"

# evaluation
ragas = "^0.1.0"
rank-bm25 = "^0.2.2"

# utilities
numpy = "^1.26.0"
pandas = "^2.2.0"
tqdm = "^4.66.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
black = "^24.4.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"